Ship the pose every model computes
The walk had no caller. It has one now: the pose table carries a third member
holding, per model, the expression each bone channel is written with - or, for the
twenty-two that refuse, what stopped them.

An operation is spelled by its own token, so an expression reads as the arithmetic
it is and a diff of the table names the operation that moved. Width rides the token
for a literal as it already does for an operation: a single-precision 0.4 and a
double-precision one are the same digits and different values, and inferring which
from whether Gson wrote a decimal point would be the one place that rule lapses.

A refusal is written down beside the poses rather than left in the log. A model with
no pose and a model whose pose could not be read are different facts, and the table
that says only which models have one cannot tell them apart - which is the failure
this whole walk is built to make impossible, appearing at the file level instead of
in an expression.

Three things had to be fixed before any of it could be trusted:

The roster was being narrowed before it was used. Clip bindings are resolved for the
models that play a clip, twenty-one of them, and the poses were taking that same
list - so a hundred and eleven models would have shipped as twenty-one. Held apart
now, because the two halves want different subsets.

The pose was frozen through Map.copyOf, whose iteration order is salted per JVM
launch. Nothing reads that order for meaning, so it would have surfaced only as the
table failing its own reproducibility check with no other symptom. Bones are written
in name order and channels in the order the vocabulary declares them, so the bytes
are a function of the pose rather than of the order the walk built it in.

And a refusal was a log line, so writing one into the table would have made shipped
bytes a function of a message's formatting. It is a value now.

Measured rather than assumed: entity_models.json and entity_geometry.js